cmake_minimum_required(VERSION 3.15...3.30)

add_executable(lecture_topic20_linked_list_encapsulation_with_nested_classes "topic 20-23-24/linked_list_encapsulation_with_nested_classes.cpp")
add_executable(lecture_topic20_linked_list_no_encapsulation "topic 20-23-24/linked_list_no_encapsulation.cpp.cpp")

add_executable(lecture_topic22_linked_McDonalds_demo "topic 22/McDonalds_demo.cpp")
add_executable(lecture_topic22_McDonalds_singleton_demo "topic 22/McDonalds_singleton_demo.cpp")
